RISDEV-8529 (#1047)
Simple search | title search failing
*Refactor fields that are used as an identifier (ecli, eli, file number,
etc.) to be indexed both as text and keyword. Text is used for the
filtering logic just like the rest of the fields (every result must
contain every token). Keyword is used for the targeted search boost
ranking logic. An exact match (after normalization) of the entire search
string gets a very large boost. *Fixed tests failing
*Refactored case law file number logic to work like the rest of the
targeted search cases *Removed case law file number test that no longer
makes sense *Fixed missing AND logic on search fields other than
"searchTerm"